--- a/README
+++ b/README
@@ -1,16 +1,4 @@
-Install
-=======
-
-Get the gem
-
-  sudo gem install method_lister
-
-Open up `~/.irbrc` and add these lines:
-
-    require 'rubygems'
-    require 'method_lister'
-    
-Usage
+About
 =====
 
 Method Lister is used to query objects and discover which ancestor implements
@@ -25,6 +13,21 @@ Method Lister adds 3 methods to all objects in the system: `ls`, `grep`, and
 
 Method Lister is intended to be used from IRB or during debugging.
 
+Install
+=======
+
+Get the gem:
+
+  sudo gem install matthew-method_lister
+
+Open up `~/.irbrc` and add these lines:
+
+    require 'rubygems'
+    require 'method_lister'
+    
+Usage
+=====
+
 `ls` or `mls`
 -------------
 
@@ -34,31 +37,76 @@ vary, depending on what you have loaded):
 
     >> [].ls
     ========== Module Kernel ==========
-    == === =~ __id__ __send__ class clone display dup eql? equal? extend
-    freeze frozen? gem grep hash id inspect instance_eval instance_of?
-    instance_variable_defined? instance_variable_get instance_variable_set
-    instance_variables is_a? kind_of? ls method methods mgrep mls mwhich nil?
-    object_id pretty_inspect private_methods protected_methods public_methods
-    require respond_to? send singleton_methods taint tainted? to_a to_s type
-    untaint which
+    PUBLIC: inspect clone method public_methods instance_variable_defined?
+    equal? which freeze grep mgrep methods respond_to? dup instance_variables
+    __id__ object_id eql? require id singleton_methods send taint frozen?
+    instance_variable_get __send__ instance_of? mls to_a type mwhich
+    protected_methods instance_eval == display === ls instance_variable_set
+    kind_of? extend to_s gem hash pretty_inspect class tainted? =~
+    private_methods nil? untaint is_a?
 
     ========== Module PP::ObjectMixin ==========
-    pretty_print pretty_print_cycle pretty_print_inspect
-    pretty_print_instance_variables
+    PUBLIC: pretty_print_instance_variables pretty_print_inspect pretty_print
+    pretty_print_cycle
 
     ========== Module Enumerable ==========
-    all? any? collect detect each_with_index entries find find_all grep
-    include? inject map max member? min partition reject select sort sort_by
-    to_a zip
+    PUBLIC: find_all sort_by collect include? detect max sort partition any?
+    to_a reject zip find min member? entries inject all? select
+    each_with_index grep map
 
     ========== Class Array ==========
-    & * + - << <=> == [] []= assoc at clear collect collect! compact compact!
-    concat delete delete_at delete_if each each_index empty? eql? fetch fill
-    first flatten flatten! frozen? hash include? index indexes indices insert
-    inspect join last length map map! nitems pack pop pretty_print
-    pretty_print_cycle push rassoc reject reject! replace reverse reverse!
-    reverse_each rindex select shift size slice slice! sort sort! to_a to_ary
-    to_s transpose uniq uniq! unshift values_at zip |
+    PUBLIC: delete_if & map! empty? indexes rindex reject last to_s assoc
+    reverse! sort each include? values_at slice * sort! each_index fetch +
+    clear pretty_print concat size join flatten! shift - eql? reverse to_ary
+    insert [] indices nitems inspect rassoc replace compact! []= | collect
+    push delete_at << frozen? reverse_each flatten hash collect! uniq! select
+    first to_a fill index reject! zip pack unshift compact transpose <=>
+    pretty_print_cycle at == slice! length uniq delete pop map
+
+You can show protected and private methods too by passing in "true":
+
+    >> [].ls true
+    ========== Module Kernel ==========
+    PUBLIC: inspect clone method public_methods instance_variable_defined?
+    equal? which freeze grep mgrep methods respond_to? dup instance_variables
+    __id__ object_id eql? require id singleton_methods send taint frozen?
+    instance_variable_get __send__ instance_of? mls to_a type mwhich
+    protected_methods instance_eval == display === ls instance_variable_set
+    kind_of? extend to_s gem hash pretty_inspect class tainted? =~
+    private_methods nil? untaint is_a?
+
+    PRIVATE: select global_variables readline warn singleton_method_added gsub
+    exit! method_missing exec abort load chomp! remove_instance_variable print
+    eval proc untrace_var srand Integer local_variables
+    singleton_method_removed readlines raise chop getc gem_original_require
+    system at_exit putc set_trace_func rand test lambda Float p
+    initialize_copy singleton_method_undefined chomp fail callcc sub! syscall
+    sleep iterator? catch autoload puts ` pp String sprintf split caller gsub!
+    open block_given? throw URI gets trap sub loop Array fork format exit
+    chop! printf binding autoload? scan trace_var
+
+    ========== Module PP::ObjectMixin ==========
+    PUBLIC: pretty_print_instance_variables pretty_print_inspect pretty_print
+    pretty_print_cycle
+
+    ========== Class Object ==========
+    PRIVATE: initialize  timeout  irb_binding
+
+    ========== Module Enumerable ==========
+    PUBLIC: find_all sort_by collect include? detect max sort partition any?
+    to_a reject zip find min member? entries inject all? select
+    each_with_index grep map
+
+    ========== Class Array ==========
+    PUBLIC: delete_if & map! empty? indexes rindex reject last to_s assoc
+    reverse! sort each include? values_at slice * sort! each_index fetch +
+    clear pretty_print concat size join flatten! shift - eql? reverse to_ary
+    insert [] indices nitems inspect rassoc replace compact! []= | collect
+    push delete_at << frozen? reverse_each flatten hash collect! uniq! select
+    first to_a fill index reject! zip pack unshift compact transpose <=>
+    pretty_print_cycle at == slice! length uniq delete pop map
+
+    PRIVATE: initialize_copy initialize
     
 `grep` or `mgrep`
 -----------------
@@ -69,43 +117,52 @@ objects `grep` is already taken:
 
     >> [].mgrep /f/
     ========== Module Kernel ==========
-    freeze frozen? instance_of? instance_variable_defined? kind_of?
+    PUBLIC: instance_variable_defined? freeze frozen? instance_of? kind_of?
 
     ========== Module Enumerable ==========
-    find find_all
+    PUBLIC: find_all  find
 
     ========== Class Array ==========
-    delete_if fetch fill first flatten flatten! frozen? shift unshift
+    PUBLIC: delete_if fetch flatten! shift frozen? flatten first fill unshift
+
+Similar to `ls` you can pass in an extra argument of "true" to see protected
+and private methods:
+
+    >> [].mgrep /f/, true
+    ========== Module Kernel ==========
+    PUBLIC: instance_variable_defined? freeze frozen? instance_of? kind_of?
+
+    PRIVATE: method_missing set_trace_func singleton_method_undefined fail
+    sprintf fork format printf
+
+    ========== Module Enumerable ==========
+    PUBLIC: find_all find
+
+    ========== Class Array ==========
+    PUBLIC: delete_if fetch flatten! shift frozen? flatten first fill unshift
     
-NOTE: `method_missing` is always considered a match
+Note that `method_missing` is always considered a match, since it could always
+potentially execute.
 
 `which` or `mwhich`
 -------------------
 
 The `which` command is for finding which classes or modules implement the
-method you're seeking.
+method you're seeking. You can pass the method name in as a string or symbol.
 
     >> [].which :to_a
     ========== Module Kernel ==========
-    to_a
+    PUBLIC: to_a
 
     ========== Module Enumerable ==========
-    to_a
+    PUBLIC: to_a
 
     ========== Class Array ==========
-    to_a
+    PUBLIC: to_a
 
-NOTE: The `which` command is exactly the same as grep(/^method$/) with the
-method name regex escaped.
-
-NOTE: `method_missing` is always considered a match.
-
-MethodLister::Finder
-====================
-
-The method finding logic is encapsulated by `MethodLister::Finder`, which has
-three public methods: `ls`, `grep`, and `which`. However, instead of printing
-to $stdout the finder will return a data structure you can manipulate.
+Logically the `which` command is the same as grep(/^your_method$/) and so the
+same comments apply about `method_missing` and the optional parameter to see
+protected/private methods.
 
 License
 =======
